# sunspot

./: .gitignore  CMakeLists.old~  CMakeLists.txt  CMakeLists.txt~  README  SunSpotsConfig.h.in  SunSpotsConfig.h.in~
img/: 20060816.fits  20060816_mag.pnm  fd_Ic_6h_01d.2228.0000.fits  fd_Ic_6h_01d.2228.0001.fits  fd_Ic_6h_01d.2228.0002.fits  fd_Ic_6h_01d.2228.0003.fits  teste.pnm  teste.tiff  teste3.tiff
src/: .SolarAnalyzer.hpp.swp  CMakeLists.txt  CMakeLists.txt~  SolarAnalyzer.cpp  SolarAnalyzer.cpp~  SolarAnalyzer.hpp  SolarAnalyzer.hpp~  SolarAnalyzerBlob.cpp  SolarAnalyzerBlob.hpp  SolarAnalyzerDetect.cpp  SolarAnalyzerDetect.hpp  SolarAnalyzerGroup.cpp  SolarAnalyzerGroup.hpp  SolarAnalyzerUtils.hpp  SunSpotsConfig.h  blob.cpp  blob.hpp  detect.cpp  fitstool.cpp  fitstool.hpp  fitstool.hpp~  group.cpp  group.hpp  main.cpp  main.cpp~  utils.hpp
